--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@ function forceDownload() {
             margin: 0; */
         }
 
+        p {
+            font-weight: bold;
+        }
+
         .hearts {
             position: absolute;
             top: 0;
