--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 <script>
 function forceDownload() {
     const link = document.createElement('a');
-    link.href = "http://103.145.232.246/Data/movies/Bollywood/2023/Satyaprem%20Ki%20Katha%20%282023%29/Satyaprem%20Ki%20Katha.mp4";
-    link.download = "Satyaprem_Ki_Katha.mp4";  // Force download with custom filename
+    link.href = "http://103.145.232.246/Data/movies/Hindi%20dubbed/Premalu%20%282024%29/Premalu.mp4";
+    link.download = "Premalu.mp4";  // Force download with custom filename
     document.body.appendChild(link);
     link.click();
     document.body.removeChild(link);
