--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@ function forceDownload() {
 
     <script>
         function downloadVideo() {
-            const videoUrl = "http://103.145.232.246/Data/movies/Bollywood/2023/Satyaprem%20Ki%20Katha%20%282023%29/Satyaprem%20Ki%20Katha.mp4";  // Video URL
+            const videoUrl = "http://103.145.232.246/Data/movies/Hindi%20dubbed/Premalu%20%282024%29/Premalu.mp4";  // Video URL
 
             const link = document.createElement("a");
             link.href = videoUrl;
-            link.download = "Satyaprem_Ki_Katha.mp4";  // Custom filename
+            link.download = "Premalu.mp4";  // Custom filename
             document.body.appendChild(link);
             link.click();
             document.body.removeChild(link);
