--- a/index.html
+++ b/index.html
@@ -1,82 +1,9 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        #rashu {
-            font-family: 'Times New Roman', Times, serif;
-            text-align: center;
-        }
-        #btn {
-            height: 500px;
-            width: 800px;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-            
-        }
-    </style>
-</head>
-<body>
-    <div id="rashu"><h1> Is For You Rashuu BaBY </h1></div>
-    <div id="btn">
-    <a href="#" onclick="forceDownload()">Download Now</a>
-</div>
-
-<script>
-function forceDownload() {
-    const link = document.createElement('a');
-    link.href = "http://103.145.232.246/Data/movies/Hindi%20dubbed/Premalu%20%282024%29/Premalu.mp4";
-    link.download = "Premalu.mp4";
-    document.body.appendChild(link);
-    link.click();
-    document.body.removeChild(link);
-}
-</script>
-
-</body>
-</html> -->
-
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Force Video Download</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 50px;
-        }
-        button {
-            padding: 10px 20px;
-            background-color: green;
-            color: white;
-            border: none;
-            cursor: pointer;
-            font-size: 16px;
-            border-radius: 5px;
-        }
-    </style>
-</head>
-<body>
-
-    <h2>Click Below to Download Video</h2>
-   
-
-</body>
-</html> -->
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Romantic Web Page</title>
+    <title>Web Page</title>
     <style>
         body {
             background: linear-gradient(to bottom, #ff758c, #ff7eb3);
